{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 239,
  "lineage": "a43920b5-28d8-4982-4268-79fd2173b6f8",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:security-group/sg-077f930c04d0be706",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057609b2ed877672c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057609b2ed877672c"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-077f930c04d0be706",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057609b2ed877672c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-cluster-20220828064154893100000005",
            "name_prefix": "eks-cluster-cluster-",
            "owner_id": "393538209260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-cluster"
            },
            "tags_all": {
              "Name": "eks-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:security-group/sg-057609b2ed877672c",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077f930c04d0be706"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-057609b2ed877672c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077f930c04d0be706"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077f930c04d0be706"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "eks-cluster-node-20220828064155158100000006",
            "name_prefix": "eks-cluster-node-",
            "owner_id": "393538209260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-node"
            },
            "tags_all": {
              "Name": "eks-cluster-node"
            },
            "timeouts": null,
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3581511075",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077f930c04d0be706",
            "self": false,
            "source_security_group_id": "sg-057609b2ed877672c",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1584722433",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077f930c04d0be706",
            "self": false,
            "source_security_group_id": "sg-057609b2ed877672c",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1016315798",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077f930c04d0be706",
            "self": false,
            "source_security_group_id": "sg-057609b2ed877672c",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2183516226",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057609b2ed877672c",
            "self": false,
            "source_security_group_id": "sg-077f930c04d0be706",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3303408675",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057609b2ed877672c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-456669501",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057609b2ed877672c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1705385008",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-057609b2ed877672c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3453964865",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057609b2ed877672c",
            "self": true,
            "source_security_group_id": "sg-057609b2ed877672c",
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1136185383",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-057609b2ed877672c",
            "self": true,
            "source_security_group_id": "sg-057609b2ed877672c",
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1572286096",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057609b2ed877672c",
            "self": false,
            "source_security_group_id": "sg-077f930c04d0be706",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2117973995",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057609b2ed877672c",
            "self": false,
            "source_security_group_id": "sg-077f930c04d0be706",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1922013717",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057609b2ed877672c",
            "self": true,
            "source_security_group_id": "sg-057609b2ed877672c",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3603970554",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-057609b2ed877672c",
            "self": true,
            "source_security_group_id": "sg-057609b2ed877672c",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0568b9b13a5a447",
            "association_id": "eipassoc-051c3395569b98a0e",
            "domain": "vpc",
            "id": "eipalloc-0d0568b9b13a5a447",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04476448eec8e4e92",
            "private_dns": "ip-10-0-4-100.ec2.internal",
            "private_ip": "10.0.4.100",
            "public_dns": "ec2-18-214-173-58.compute-1.amazonaws.com",
            "public_ip": "18.214.173.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:internet-gateway/igw-07ffa514c4a4a4242",
            "id": "igw-07ffa514c4a4a4242",
            "owner_id": "393538209260",
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            },
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0568b9b13a5a447",
            "connectivity_type": "public",
            "id": "nat-01f25f2563911895c",
            "network_interface_id": "eni-03d9dbd8a4e7d8fa0",
            "private_ip": "10.0.4.65",
            "public_ip": "18.214.173.58",
            "subnet_id": "subnet-0df39af4fa416377b",
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0520b09daa0714c5a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01f25f2563911895c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0520b09daa0714c5a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07ffa514c4a4a4242",
            "id": "r-rtb-088cb799c4a1ebacc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088cb799c4a1ebacc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:route-table/rtb-0520b09daa0714c5a",
            "id": "rtb-0520b09daa0714c5a",
            "owner_id": "393538209260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01fd9ef701b54ec15",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:route-table/rtb-088cb799c4a1ebacc",
            "id": "rtb-088cb799c4a1ebacc",
            "owner_id": "393538209260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ffa514c4a4a4242",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0561962e8ed86ffb7",
            "route_table_id": "rtb-0520b09daa0714c5a",
            "subnet_id": "subnet-0a7906aa28a020cab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f57b512fa999fb0",
            "route_table_id": "rtb-0520b09daa0714c5a",
            "subnet_id": "subnet-0311fcf7672e46c5f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abd25186689e7185",
            "route_table_id": "rtb-0520b09daa0714c5a",
            "subnet_id": "subnet-08feff862165153b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032982e708d892bfd",
            "route_table_id": "rtb-088cb799c4a1ebacc",
            "subnet_id": "subnet-0df39af4fa416377b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02aee9bd34b00991f",
            "route_table_id": "rtb-088cb799c4a1ebacc",
            "subnet_id": "subnet-0176e7449472087b1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046b09739f9b5b275",
            "route_table_id": "rtb-088cb799c4a1ebacc",
            "subnet_id": "subnet-0660dc544fa2f9826"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:subnet/subnet-0a7906aa28a020cab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7906aa28a020cab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "393538209260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:subnet/subnet-0311fcf7672e46c5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0311fcf7672e46c5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "393538209260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:subnet/subnet-08feff862165153b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08feff862165153b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "393538209260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:subnet/subnet-0df39af4fa416377b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df39af4fa416377b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "393538209260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:subnet/subnet-0176e7449472087b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0176e7449472087b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "393538209260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:subnet/subnet-0660dc544fa2f9826",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0660dc544fa2f9826",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "393538209260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0707a67f5bd799a6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538209260:vpc/vpc-0707a67f5bd799a6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0496fa15cbf30165b",
            "default_route_table_id": "rtb-0df62fb18fc658832",
            "default_security_group_id": "sg-08aa3cd6b9a33ed24",
            "dhcp_options_id": "dopt-37fc444c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0707a67f5bd799a6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df62fb18fc658832",
            "owner_id": "393538209260",
            "tags": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            },
            "tags_all": {
              "Created_By": "DevOps Team",
              "Createed_At": "2022-08-28T09:08:18Z",
              "Managed_By": "Terraform",
              "Name": "EKS-Cluster-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}